--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ span{
         content: "Django developer";
     }
     81%, 100%{
-        content: "Cloud computing engineer";
+        content: "Cloud engineer";
     }
 }
 
